--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>X</title>
+    <title>Caro</title>
 </head>
 <body>
 <header>
@@ -20,10 +20,10 @@
             <div>
                 <label>Level: </label>
                 <select name="game_level" id="game_level">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
+                    <option value="2">Normal</option>
+                    <option value="3">Hard</option>
+                    <option value="4">Very Hard</option>
+<!--                    <option value="4">4</option>-->
                 </select>
             </div>
     
