--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
                     <option value="2">Normal</option>
                     <option value="4">Hard</option>
                     <option value="6">Very Hard</option>
+                    <option value="8">Insane</option>
 <!--                    <option value="4">4</option>-->
                 </select>
             </div>
