--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,10 @@
 <header>
     <link rel="stylesheet" href="style.css"/>
     <script src="libs/jquery-3.6.0.min.js"></script>
-    <script src="script.js"></script>
+    <script src="js/variable.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/bot.js"></script>
+    <script src="js/board.js"></script>
 </header>
 <div class="main">
     <div class="c_panel">
