--- a/static/index.html
+++ b/static/index.html
@@ -19,10 +19,10 @@
         <div>
             <label>Level: </label>
             <select name="game_level" id="game_level">
-                <option value="1">4</option>
-                <option value="2">6</option>
-                <option value="3">8</option>
-                <option value="4">10</option>
+                <option value="2">Easy</option>
+                <option value="3">Normal</option>
+                <option value="4">Hard</option>
+                <option value="5">Insane</option>
             </select>
         </div>
 
